If module cannot do something, then it should report failure to the user
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/vm_node_affinity/tasks/main.yml
+++ b/tests/integration/targets/vm_node_affinity/tasks/main.yml
@@ -243,8 +243,10 @@
         vm_name: XLAB-vm_node_affinity_CI_test
         strict_affinity: true
       register: output
+      ignore_errors: true
     - ansible.builtin.assert:
         that:
+          - output is failed
           - output is not changed
           - "'Invalid set of parameters - strict affinity set to true and nodes not provided' in output.msg"
     
