--- a/tests/integration/targets/vm_import/tasks/main.yml
+++ b/tests/integration/targets/vm_import/tasks/main.yml
@@ -5,20 +5,17 @@
     SC_PASSWORD: "{{ sc_password }}"
 
   block:
-    - name: Delete XLAB-import-test-integration
-      scale_computing.hypercore.vm: &delete-XLAB-import-test-integration
-        vm_name: XLAB-import-test-integration
+# ----------------------------------Cleanup------------------------------------------------------------------------
+    - name: Delete XLAB-import-test-integration VMs
+      scale_computing.hypercore.vm: &delete-XLAB-vm_clone_CI-test
+        vm_name: "{{ item }}"
         state: absent
+      loop:
+        - XLAB-import-test-integration
+        - XLAB-import-test-integration-imported
+        - XLAB-import-test-integration-imported-cloud-init
 
-    - name: Delete XLAB-import-test-integration-imported
-      scale_computing.hypercore.vm: &delete-XLAB-import-test-integration-imported
-        vm_name: XLAB-import-test-integration-imported
-        state: absent
-
-    - name: Delete XLAB-import-test-integration-imported-cloud-init
-      scale_computing.hypercore.vm: &delete-XLAB-import-test-integration-imported-cloud-init
-        vm_name: XLAB-import-test-integration-imported-cloud-init
-        state: absent
+# ----------------------------------Job-----------------------------------------------------------------------------
 
     - name: Create XLAB-import-test-integration
       scale_computing.hypercore.api:
@@ -68,6 +65,11 @@
       scale_computing.hypercore.task_wait:
         task_tag: "{{vm_created.record}}"
 
+    - name: Retrieve source VM
+      scale_computing.hypercore.vm_info:
+        vm_name: XLAB-import-test-integration
+      register: source_vm
+
     - name: Export XLAB-import-test-integration to SMB
       scale_computing.hypercore.vm_export:
         vm_name: XLAB-import-test-integration
@@ -96,13 +98,19 @@
           - import_vm is changed
           - import_vm.msg == "Virtual machine - XLAB-import-test-integration-imported - import complete."
 
-    - name: Retrieve imported VM
+    - name: Retrieve XLAB-import-test-integration-imported
       scale_computing.hypercore.vm_info:
         vm_name: XLAB-import-test-integration-imported
       register: imported_info
     - ansible.builtin.assert:
         that:
           - imported_info.records | length == 1
+          - imported_info.records.0.vcpu == source_vm.records.0.vcpu
+          - imported_info.records.0.tags == source_vm.records.0.tags
+          - imported_info.records.0.boot_devices | length != source_vm.records.0.boot_devices | length
+          - imported_info.records.0.disks | length ==  source_vm.records.0.disks | length
+          - imported_info.records.0.nics | length ==  source_vm.records.0.nics | length
+          - imported_info.records.0.node_affinity == source_vm.records.0.node_affinity
 
     - name: Import XLAB-import-test-integration from SMB, add cloud_init
       scale_computing.hypercore.vm_import:
@@ -128,23 +136,70 @@
           - import_vm is changed
           - import_vm.msg == "Virtual machine - XLAB-import-test-integration-imported-cloud-init - import complete."
 
-    - name: Delete XLAB-import-test-integration
-      scale_computing.hypercore.vm: *delete-XLAB-import-test-integration
-      register: vm_deleted
+    - name: Retrieve XLAB-import-test-integration-imported-cloud-init
+      scale_computing.hypercore.vm_info:
+        vm_name: XLAB-import-test-integration-imported-cloud-init
+      register: imported_info
     - ansible.builtin.assert:
         that:
-          - vm_deleted is changed
+          - imported_info.records | length == 1
+          - imported_info.records.0.vcpu == source_vm.records.0.vcpu
+          - imported_info.records.0.tags == source_vm.records.0.tags
+          - imported_info.records.0.boot_devices | length != source_vm.records.0.boot_devices | length
+          - imported_info.records.0.disks | length !=  source_vm.records.0.disks | length
+          - imported_info.records.0.nics | length ==  source_vm.records.0.nics | length
+          - imported_info.records.0.node_affinity == source_vm.records.0.node_affinity
 
-    - name: Delete XLAB-import-test-integration-imported
-      scale_computing.hypercore.vm: *delete-XLAB-import-test-integration-imported
-      register: vm_deleted
-    - ansible.builtin.assert:
-        that:
-          - vm_deleted is changed
+# ----------------------------------Idempotence check------------------------------------------------------------------------
 
-    - name: Delete XLAB-import-test-integration-imported-cloud-init
-      scale_computing.hypercore.vm: *delete-XLAB-import-test-integration-imported-cloud-init
-      register: vm_deleted
+    - name: Import XLAB-import-test-integration from SMB Idempotence
+      scale_computing.hypercore.vm_import:
+        vm_name: XLAB-import-test-integration-imported
+        smb:
+          server: "10.5.11.179"
+          path: /users/integration-test
+          username: example1
+          password: badpass
+      register: import_vm
     - ansible.builtin.assert:
         that:
-          - vm_deleted is changed
+          - import_vm is not changed
+          - import_vm.msg == "Virtual machine - XLAB-import-test-integration-imported - already exists."
+
+    - name: Import XLAB-import-test-integration from SMB, add cloud_init Idempotence
+      scale_computing.hypercore.vm_import:
+        vm_name: XLAB-import-test-integration-imported-cloud-init
+        smb:
+          server: "10.5.11.179"
+          path: /users/integration-test
+          username: example1
+          password: badpass
+        cloud_init:
+          user_data: |
+            is_this: yes
+            valid:
+              - yaml
+              - expression?
+          meta_data: |
+            this_data:
+              - is
+              - very meta
+      register: import_vm
+    - ansible.builtin.assert:
+        that:
+          - import_vm is not changed
+          - import_vm.msg == "Virtual machine - XLAB-import-test-integration-imported-cloud-init - already exists."
+
+# ----------------------------------Cleanup------------------------------------------------------------------------
+
+    - name: Delete XLAB-import-test-integration VMs
+      scale_computing.hypercore.vm: *delete-XLAB-vm_clone_CI-test
+      register: output
+      loop:
+        - XLAB-import-test-integration
+        - XLAB-import-test-integration-imported
+        - XLAB-import-test-integration-imported-cloud-init
+        - XLAB-vm_clone_CI-test-cloud_init-clone
+    - ansible.builtin.assert:
+        that:
+          - output is changed
