--- a/sample_vm_replication_playbook.yml
+++ b/sample_vm_replication_playbook.yml
@@ -17,11 +17,10 @@
         username: 'admin'
         password: 'admin'
       vm_name: XLAB-POST-TEST
-      remote_cluster: '891f482a-8f5f-4755-bea4-bbcc338f566f'
+      remote_cluster: 'PUB4 - ROBO'
       state: disabled  # choices [enabled|disabled|reenabled]
     register: testout
 
   - name: output the HTTP request results
     debug:
       var: testout
-      
