CI externalize variables for access to SMB server
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,6 +77,10 @@ integration:
       sc_host: ${SC_HOST}
       sc_username: ${SC_USERNAME}
       sc_password: ${SC_PASSWORD}
+      smb_server: ${SMB_SERVER}
+      smb_share: ${SMB_SHARE}
+      smb_username: ${SMB_USERNAME}
+      smb_password: ${SMB_PASSWORD}
       EOF
     - cat tests/integration/integration_config.yml
     - ansible-test integration
