--- a/tests/integration/targets/vm_export/tasks/main.yml
+++ b/tests/integration/targets/vm_export/tasks/main.yml
@@ -67,10 +67,10 @@
       scale_computing.hypercore.vm_export:
         vm_name: XLAB-export-test-integration
         smb:
-          server: "10.5.11.179"
-          path: /users/test
-          username: example1
-          password: badpass
+          server: "{{ smb_server }}"
+          path: "{{ smb_share }}/integration-test-vm-export"
+          username: "{{ smb_username }}"
+          password: "{{ smb_password }}"
           file_name: my_file.xml
       register: output
     - ansible.builtin.assert:
@@ -85,10 +85,10 @@
       scale_computing.hypercore.vm_export:
         vm_name: XLAB-export-test-integration
         smb:
-          server: "10.5.11.179"
-          path: /users/test
-          username: example1
-          password: badpass
+          server: "{{ smb_server }}"
+          path: "{{ smb_share }}/integration-test-vm-export"
+          username: "{{ smb_username }}"
+          password: "{{ smb_password }}"
           file_name: my_file.xml
       register: output
     - ansible.builtin.assert:
