--- a/tests/integration/targets/vm_params/tasks/main.yml
+++ b/tests/integration/targets/vm_params/tasks/main.yml
@@ -5,6 +5,8 @@
     SC_PASSWORD: "{{ sc_password }}"
 
   block:
+  # ===================================================================
+  # Prepare test VM with known initial state
   - name: Delete XLAB-vm_params_CI_test (if it exists from before)
     scale_computing.hypercore.vm: &delete-XLAB-vm_params_CI_test
       vm_name: XLAB-vm_params_CI_test
@@ -48,7 +50,9 @@
           local_retention: "{{ 10 * 7*24*60*60 }}"  # 10 days, unit seconds
     register: snapshot_schedule
 
-  - name: Set VMs params - check mode
+  # ===================================================================
+  # Set VMs params, except for name
+  - name: Set VMs params
     scale_computing.hypercore.vm_params: &Set-VMs-parameters
       vm_name: XLAB-vm_params_CI_test
       description: VM for testing vm_params module - updated
@@ -57,52 +61,50 @@
         - updated
       vcpu: 3
       memory:  "{{ '1024 MB' | human_to_bytes }}"
-      power_state: stop # CHECK AFTER VM IS MERGED IF THIS STATE CAN BE SET
+      power_state: stop
       snapshot_schedule: "{{ snapshot_schedule.record[0].name }}"
-    check_mode: yes
     register: output
   - ansible.builtin.assert:
       that:
         - output is changed
         - output.reboot_needed == true
 
-  - name: Check VM's params aren't changed
+  - name: Check VMs params changed
     scale_computing.hypercore.vm_info:
       vm_name: XLAB-vm_params_CI_test
-    register: output
+    register: updated
   - ansible.builtin.assert:
       that:
-        - output.records[0] == initial.record[0]
-
-  - name: Set VMs params - reboot needed
-    scale_computing.hypercore.vm_params: *Set-VMs-parameters
-    register: output
-  - ansible.builtin.assert:
-      that:
-        - output.reboot_needed == true
-
-  - name: Check VM's params changed
-    scale_computing.hypercore.vm_info:
-      vm_name: XLAB-vm_params_CI_test
-    register: output
-  - ansible.builtin.assert:
-      that:
-        - output.records[0].vm_name == "XLAB-vm_params_CI_test"
-        - output.records[0].description == "VM for testing vm_params module - updated"
-        - output.records[0].tags == ["Xlab", "updated"]
-        - output.records[0].vcpu == 3
-        - output.records[0].memory == 1073741824
-        - output.records[0].power_state == "stopped"
-        - output.records[0].snapshot_schedule == snapshot_schedule.record[0].name
+        - updated.records[0].description == "VM for testing vm_params module - updated"
+        - updated.records[0].tags == ["Xlab", "updated"]
+        - updated.records[0].vcpu == 3
+        - updated.records[0].memory == 1073741824
+        - updated.records[0].power_state == "stopped"
+        - updated.records[0].snapshot_schedule == snapshot_schedule.record[0].name
   
-  - name: Set VMs params - no change
+  - name: Set VMs params - idempotence
     scale_computing.hypercore.vm_params: *Set-VMs-parameters
     register: output
   - ansible.builtin.assert:
       that:
         - output is not changed
+  
+  - name: Check VMs params aren't changed
+    scale_computing.hypercore.vm_info:
+      vm_name: XLAB-vm_params_CI_test
+    register: output
+  - ansible.builtin.assert:
+      that:
+        - output.records[0].description == updated.records[0].description
+        - output.records[0].tags == updated.records[0].tags
+        - output.records[0].vcpu == updated.records[0].vcpu
+        - output.records[0].memory == updated.records[0].memory
+        - output.records[0].power_state == updated.records[0].power_state
+        - output.records[0].snapshot_schedule == updated.records[0].snapshot_schedule
 
-  - name: Set VMs params - reboot not needed
+  # ===================================================================
+  # Rename VM
+  - name: Rename VM - reboot not needed
     scale_computing.hypercore.vm_params: 
       vm_name: XLAB-vm_params_CI_test
       vm_name_new: XLAB-vm_params_CI_test - updated
@@ -111,12 +113,30 @@
       that:
         - output is changed
         - output.reboot_needed == false
+  
+  - name: Check VMs name changed
+    scale_computing.hypercore.vm_info:
+      vm_name: XLAB-vm_params_CI_test - updated
+    register: output
+  - ansible.builtin.assert:
+      that:
+        - output.records | length == 1
+  
+  - name: Check that VM with old name dosen't exist
+    scale_computing.hypercore.vm_info:
+      vm_name: XLAB-vm_params_CI_test
+    register: output
+  - ansible.builtin.assert:
+      that:
+        - output.records | length == 0
 
+  # ===================================================================
+  # Delete snapshot schedule, description and tags
   - name: Delete snapshot schedule, description and tags
-    scale_computing.hypercore.vm_params:
+    scale_computing.hypercore.vm_params: &delete-schedule-description-tags
       vm_name: XLAB-vm_params_CI_test - updated
       snapshot_schedule: ""
-      tags: []
+      tags: [""]
       description: ""
     register: output
   - ansible.builtin.assert:
@@ -124,7 +144,7 @@
         - output is changed
         - output.reboot_needed == true
 
-  - name: Check VM's params changed
+  - name: Check VMs params changed
     scale_computing.hypercore.vm_info:
       vm_name: XLAB-vm_params_CI_test - updated
     register: output
@@ -134,6 +154,26 @@
         - output.records[0].tags == [""]
         - not output.records[0].snapshot_schedule
   
+  - name: Delete snapshot schedule, description and tags - idempotence
+    scale_computing.hypercore.vm_params: *delete-schedule-description-tags
+    register: output
+  - ansible.builtin.assert:
+      that:
+        - output is not changed
+        - output.reboot_needed == false
+  
+  - name: Check VMs params aren't changed
+    scale_computing.hypercore.vm_info:
+      vm_name: XLAB-vm_params_CI_test - updated
+    register: output
+  - ansible.builtin.assert:
+      that:
+        - output.records[0].description == ""
+        - output.records[0].tags == [""]
+        - not output.records[0].snapshot_schedule
+  
+  # ===================================================================
+  # Set nonexisting snapshot schedule
   - name: Set VMs snapshot_schedule - not found
     scale_computing.hypercore.vm_params:
       vm_name: XLAB-vm_params_CI_test - updated
@@ -144,6 +184,16 @@
       that:
         - "'No records from endpoint /rest/v1/VirDomainSnapshotSchedule' in output.msg" 
 
+  - name: Check VMs snapshot schedule isn't changed
+    scale_computing.hypercore.vm_info:
+      vm_name: XLAB-vm_params_CI_test - updated
+    register: output
+  - ansible.builtin.assert:
+      that:
+        - not output.records[0].snapshot_schedule
+
+  # ===================================================================
+  # Set nonexisting snapshot schedule
   - name: Set VMs power_state - not applied
     scale_computing.hypercore.vm_params:
       vm_name: XLAB-vm_params_CI_test - updated
@@ -153,7 +203,17 @@
   - ansible.builtin.assert:
       that:
         - "'Unexpected response - 500' in output.msg"
+  
+  - name: Check VMs power_state isn't changed
+    scale_computing.hypercore.vm_info:
+      vm_name: XLAB-vm_params_CI_test - updated
+    register: output
+  - ansible.builtin.assert:
+      that:
+        - output.records[0].power_state == "stopped"
 
+  # ===================================================================
+  # Cleanup
   - name: Delete snapshot schedule
     scale_computing.hypercore.snapshot_schedule: *delete-snapshot-schedule
 
